[gd_scene load_steps=8 format=2]

[ext_resource path="res://voronoi/VoroniColorF.material" type="Material" id=1]
[ext_resource path="res://grow_points/BlockTest.gd" type="Script" id=2]
[ext_resource path="res://grow_points/BuildingSizeCurve.tres" type="Curve" id=3]
[ext_resource path="res://effects/MoonMaterial.tres" type="Material" id=4]
[ext_resource path="res://effects/Starfield.tscn" type="PackedScene" id=5]

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 20, 30 )

[sub_resource type="SphereMesh" id=3]

[node name="BlockTest" type="Spatial"]
script = ExtResource( 2 )
max_square_size = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.707107, 0.408244, -0.577353, 0, 0.8165, 0.577345, 0.707107, 0.408244, -0.577353, -5, 12, -5 )
visible = false
projection = 1
current = true
size = 5.0

[node name="PassTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1

[node name="QuadCheckTimer" type="Timer" parent="."]
process_mode = 0

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 15 )
visible = false
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )

[node name="BuildingMaster" type="Spatial" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, -10, 0, 0, 0 )

[node name="OrthoDownCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20, 8, -20 )
projection = 1
current = true
size = 50.0

[node name="FOV30Camera" type="Camera" parent="."]
transform = Transform( 0.939693, 0.0740267, 0.333913, 0, 0.976296, -0.21644, -0.34202, 0.203387, 0.917418, 13, 2, 12 )
cull_mask = 3
current = true
fov = 30.0
size = 3.0

[node name="FOV15Camera" type="Camera" parent="."]
transform = Transform( 0.939693, 0.029809, 0.340718, 0, 0.996195, -0.0871557, -0.34202, 0.0818996, 0.936117, 13, 2, 12 )
cull_mask = 3
fov = 15.0
size = 3.0

[node name="CameraAlignedEffects" type="Spatial" parent="FOV15Camera"]
transform = Transform( 1, 0, 0, 0, 1, -7.45058e-09, 0, 0, 1, 0, 0, -55 )

[node name="Starfield" parent="FOV15Camera/CameraAlignedEffects" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, -1.86265e-09, 1, -7.45058e-09, 0, 0, 1, -1.90735e-06, 8, -3.8147e-06 )
width = 22.0
height = 10.0

[node name="Moon" type="MeshInstance" parent="FOV15Camera/CameraAlignedEffects"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[connection signal="timeout" from="PassTimer" to="." method="_on_PassTimer_timeout"]
[connection signal="timeout" from="QuadCheckTimer" to="." method="_on_QuadCheckTimer_timeout"]
